# rocket.chat-tray

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: autostart.desktop  build-venv.sh  config.conf.example  launcher.desktop  nfpm.yaml  postinstall.sh  preinstall.sh  preremove.sh  release.sh  rocketchat-tray
rocketchat_tray/: about_dialog.py  auth.py  autostart.py  config.py  ddp.py  deeplink.py  i18n.py  idle_watch.py  main.py  notifier.py  presence.py  rc_client.py  settings_dialog.py  single_instance.py  sounds.py  tray.py  widgets.py
rocketchat_tray/resources/: __init__.py
